DuPont DevSB/src/objects/Body_Armor_Solution__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Areal_Density__c</fullName>
        <label>Areal Density</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BA_Configuration__c</fullName>
        <label>BA Configuration</label>
        <referenceTo>BA_Configuration__c</referenceTo>
        <relationshipName>Body_Armor_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BP_BM_Areal_Density__c</fullName>
        <label>BP BM Areal Density</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Comment__c</fullName>
        <label>BP Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BP_Material_Price__c</fullName>
        <label>BP Material Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_Plate_Solution_Thickness__c</fullName>
        <label>BP Plate Solution Thickness</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Weight__c</fullName>
        <label>BP Weight</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_areal_density__c</fullName>
        <label>BP areal density</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_backing_material_price__c</fullName>
        <label>BP backing material price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_miscellaneous_price__c</fullName>
        <label>BP miscellaneous price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_price_for_L_size__c</fullName>
        <label>BP price for L size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_price_for_M_size__c</fullName>
        <label>BP price for M size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_price_for_S_size__c</fullName>
        <label>BP price for S size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_price_for_XL_size__c</fullName>
        <label>BP price for XL size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_price_for_XS_size__c</fullName>
        <label>BP price for XS size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_price_for_XXL_size__c</fullName>
        <label>BP price for XXL size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_price_per_kg__c</fullName>
        <label>BP price per kg</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BP_tile_Thickness__c</fullName>
        <label>BP tile thickness</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_weight_of_L_size__c</fullName>
        <label>BP weight  of L size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_weight_of_M_size__c</fullName>
        <label>BP weight  of M size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_weight_of_S_size__c</fullName>
        <label>BP weight  of S size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_weight_of_XL_size__c</fullName>
        <label>BP weight of XL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_weight_of_XS_size__c</fullName>
        <label>BP weight of XS size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_weight_of_XXL_size__c</fullName>
        <label>BP weight  of XXL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BackingLayerPrice_BP__c</fullName>
        <label>BackingLayerPrice_BP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BackingLayerPrice_FP__c</fullName>
        <label>BackingLayerPrice_FP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BackingLayerPrice_SP__c</fullName>
        <label>BackingLayerPrice_SP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backing_Material_BP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backing Material BP</label>
        <referenceTo>Material_Master__c</referenceTo>
        <relationshipName>Body_Armor_Solutions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backing_Material_FP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backing Material FP</label>
        <referenceTo>Material_Master__c</referenceTo>
        <relationshipName>Body_Armor_Solutions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backing_Material_SP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backing Material SP</label>
        <referenceTo>Material_Master__c</referenceTo>
        <relationshipName>Body_Armor_Solutions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backing_layers_BP__c</fullName>
        <label>No. of backing layers BP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backing_layers_FP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of backing layers FP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backing_layers_SP__c</fullName>
        <label>No. of backing layers SP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_Armor_Solution_ID_iOS__c</fullName>
        <externalId>true</externalId>
        <label>Body Armor Solution ID iOS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomGSM_BM_BP__c</fullName>
        <label>CustomGSM_BM_BP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomGSM_BM_FP__c</fullName>
        <label>CustomGSM_BM_FP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomGSM_BM_SP__c</fullName>
        <label>CustomGSM_BM_SP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomGSM_BP__c</fullName>
        <label>CustomGSM_BP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomGSM_FP__c</fullName>
        <label>CustomGSM_FP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomGSM_SP__c</fullName>
        <label>CustomGSM_SP</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Requirements__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Requirements</label>
        <referenceTo>Functional_Design_Requirement__c</referenceTo>
        <relationshipName>Body_Armor_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FP_BM_Areal_Density__c</fullName>
        <label>FP BM Areal Density</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_Comment__c</fullName>
        <label>FP Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FP_Material_Price__c</fullName>
        <label>FP Material Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_Plate_Solution_Thickness__c</fullName>
        <label>FP Plate Solution Thickness</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_Weight__c</fullName>
        <label>FP Weight</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_areal_density__c</fullName>
        <label>FP areal density</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_backing_material_price__c</fullName>
        <label>FP backing material price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_miscellaneous_price__c</fullName>
        <label>FP miscellaneous price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_price_for_L_size__c</fullName>
        <label>FP price for L size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_price_for_M_size__c</fullName>
        <label>FP price for M size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_price_for_S_size__c</fullName>
        <label>FP price for S size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_price_for_XL_size__c</fullName>
        <label>FP price for XL size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_price_for_XS_size__c</fullName>
        <label>FP price for XS size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_price_for_XXL_size__c</fullName>
        <label>FP price for XXL size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_price_per_kg__c</fullName>
        <label>FP price per kg</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_tile_Thickness__c</fullName>
        <label>FP tile thickness</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_weight_of_L_size__c</fullName>
        <label>FP weight  of L size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_weight_of_M_size__c</fullName>
        <label>FP weight  of M size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_weight_of_S_size__c</fullName>
        <label>FP weight  of S size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_weight_of_XL_size__c</fullName>
        <label>FP weight of XL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_weight_of_XS_size__c</fullName>
        <label>FP weight of XS size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_weight_of_XXL_size__c</fullName>
        <label>FP weight  of XXL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsSelectedBAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field means that BA solution was selected as a part of solution package on solution package screen.</description>
        <label>IsSelectedBAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material_Master_BP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Master BP</label>
        <referenceTo>Material_Master__c</referenceTo>
        <relationshipLabel>BA Solutions (Material Master BP)</relationshipLabel>
        <relationshipName>Body_Armor_Solutions_BP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Master_FP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Master FP</label>
        <referenceTo>Material_Master__c</referenceTo>
        <relationshipLabel>BA Solutions (Material Master FP)</relationshipLabel>
        <relationshipName>Body_Armor_Solution_FP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Master_SP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Master SP</label>
        <referenceTo>Material_Master__c</referenceTo>
        <relationshipLabel>BA Solutions (Material Master SP)</relationshipLabel>
        <relationshipName>Body_Armor_Solutions_SP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Cost_for_BP__c</fullName>
        <label>Miscellaneous Cost for BP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Cost_for_FP__c</fullName>
        <label>Miscellaneous Cost for FP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Cost_for_SP__c</fullName>
        <label>Miscellaneous Cost for SP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Of_Layers_BP__c</fullName>
        <label>No Of Layers BP</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Layers_FP__c</fullName>
        <label>No Of Layers FP</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Layers_SP__c</fullName>
        <label>No Of Layers SP</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Layers_if_Material_is_UHMPE_BP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of Layers if Material is UHMPE BP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Layers_if_Material_is_UHMPE_FP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of Layers if Material is UHMPE FP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Layers_if_Material_is_UHMPE_SP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of Layers if Material is UHMPE SP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_To_BAM_HAP_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created self lookup for solution package screen to store HAP ID to which SAP will be mapped. This will depend on selected solution package by customer</description>
        <label>Related To BAM HAP 1</label>
        <referenceTo>Body_Armor_Solution__c</referenceTo>
        <relationshipLabel>BA Solutions</relationshipLabel>
        <relationshipName>BA_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_BAM_HAP_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created self lookup for solution package screen to store HAP ID to which SAP will be mapped. This will depend on selected solution package by customer</description>
        <label>Related To BAM HAP 2</label>
        <referenceTo>Body_Armor_Solution__c</referenceTo>
        <relationshipLabel>BA Solutions (Related To BAM HAP 2)</relationshipLabel>
        <relationshipName>BA_Solutions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_BAM_HAP_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created self lookup for solution package screen to store HAP ID to which SAP will be mapped. This will depend on selected solution package by customer</description>
        <label>Related To BAM HAP 3</label>
        <referenceTo>Body_Armor_Solution__c</referenceTo>
        <relationshipLabel>BA Solutions (Related To BAM HAP 3)</relationshipLabel>
        <relationshipName>BA_Solutions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Thickness__c</fullName>
        <label>SAP Thickness(mm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_weight_of_L_size__c</fullName>
        <label>SAP weight of L size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_weight_of_M_size__c</fullName>
        <label>SAP weight of M size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_weight_of_S_size__c</fullName>
        <label>SAP weight of S size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_weight_of_XL_size__c</fullName>
        <label>SAP weight of XL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_weight_of_XS_size__c</fullName>
        <label>SAP weight of XS size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_weight_of_XXL_size__c</fullName>
        <label>SAP weight of XXL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_BM_Areal_Density__c</fullName>
        <label>SP BM Areal Density</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Comment__c</fullName>
        <label>SP Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SP_Material_Price__c</fullName>
        <label>SP Material Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_Plate_Solution_Thickness__c</fullName>
        <label>SP Plate Solution Thickness</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Weight__c</fullName>
        <label>SP Weight</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_areal_density__c</fullName>
        <label>SP areal density</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_backing_material_price__c</fullName>
        <label>SP backing material price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_miscellaneous_price__c</fullName>
        <label>SP miscellaneous price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_price_for_L_size__c</fullName>
        <label>SP price for L size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_price_for_M_size__c</fullName>
        <label>SP price for M size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_price_for_S_size__c</fullName>
        <label>SP price for S size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_price_for_XL_size__c</fullName>
        <label>SP price for XL size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_price_for_XS_size__c</fullName>
        <label>SP price for XS size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_price_for_XXL_size__c</fullName>
        <label>SP price for XXL size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_price_per_kg__c</fullName>
        <label>SP price per kg</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SP_tile_thickness__c</fullName>
        <label>SP tile thickness</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_weight_of_L_size__c</fullName>
        <label>SP weight  of L size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_weight_of_M_size__c</fullName>
        <label>SP weight  of M size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_weight_of_S_size__c</fullName>
        <label>SP weight  of S size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_weight_of_XL_size__c</fullName>
        <label>SP weight of XL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_weight_of_XS_size__c</fullName>
        <label>SP weight of XS size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_weight_of_XXL_size__c</fullName>
        <label>SP weight  of XXL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_of_L_size__c</fullName>
        <label>Total weight of L size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_of_M_size__c</fullName>
        <label>Total weight of M size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_of_S_size__c</fullName>
        <label>Total weight of S size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_of_XL_size__c</fullName>
        <label>Total weight of XL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_of_XS_size__c</fullName>
        <label>Total weight of XS size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_weight_of_XXL_size__c</fullName>
        <label>Total weight of XXL size</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>BA Solution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Solution  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA Solutions</pluralLabel>
    <recordTypes>
        <fullName>HAP_Solution</fullName>
        <active>true</active>
        <label>HAP Solution</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAP_Solution</fullName>
        <active>true</active>
        <label>SAP Solution</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>